// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses alt.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  :\\",
            \\"between\\": \\"  \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"float\\",
          \\"value\\": \\"left\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  :\\",
            \\"between\\": \\"  \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"width\\",
          \\"value\\": \\"274px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"height\\",
          \\"value\\": \\"75px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"margin\\",
          \\"value\\": \\"0\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 11
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"repeat\\",
              \\"value\\": \\"no-repeat\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 7,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 7,
                  \\"column\\": 21
                }
              }
            },
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    :\\",
                \\"between\\": \\" \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"image\\",
              \\"value\\": \\"none\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 8,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 8,
                  \\"column\\": 15
                }
              }
            }
          ],
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 6,
              \\"column\\": 1
            },
            \\"end\\": {
              \\"line\\": 8,
              \\"column\\": 16
            }
          },
          \\"selector\\": \\"background:\\"
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\",
                \\"between\\": \\"\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n    \\",
                    \\"between\\": \\": \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"color\\",
                  \\"value\\": \\"green\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 10,
                      \\"column\\": 5
                    },
                    \\"end\\": {
                      \\"line\\": 10,
                      \\"column\\": 16
                    }
                  }
                }
              ],
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 9,
                  \\"column\\": 1
                },
                \\"end\\": {
                  \\"line\\": 10,
                  \\"column\\": 17
                }
              },
              \\"selector\\": \\"\\"
            }
          ],
          \\"selector\\": \\"a:hover, a:visited\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 9,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 10,
              \\"column\\": 17
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\",
                \\"between\\": \\"\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n    \\",
                    \\"between\\": \\": \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"color\\",
                  \\"value\\": \\"red\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 12,
                      \\"column\\": 5
                    },
                    \\"end\\": {
                      \\"line\\": 12,
                      \\"column\\": 14
                    }
                  }
                },
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n    :\\",
                    \\"between\\": \\" \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"background-color\\",
                  \\"value\\": \\"green\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 13,
                      \\"column\\": 5
                    },
                    \\"end\\": {
                      \\"line\\": 13,
                      \\"column\\": 27
                    }
                  }
                }
              ],
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 11,
                  \\"column\\": 1
                },
                \\"end\\": {
                  \\"line\\": 13,
                  \\"column\\": 28
                }
              },
              \\"selector\\": \\"\\"
            }
          ],
          \\"selector\\": \\"b:hover\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 11,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 13,
              \\"column\\": 28
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\",
                \\"between\\": \\"\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n    \\",
                    \\"between\\": \\": \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"nosp\\",
                  \\"value\\": \\"1 + 2\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 15,
                      \\"column\\": 5
                    },
                    \\"end\\": {
                      \\"line\\": 15,
                      \\"column\\": 15
                    }
                  }
                },
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n    \\",
                    \\"between\\": \\" : \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"sp\\",
                  \\"value\\": \\"1 + 2\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 16,
                      \\"column\\": 5
                    },
                    \\"end\\": {
                      \\"line\\": 16,
                      \\"column\\": 14
                    }
                  }
                }
              ],
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 14,
                  \\"column\\": 1
                },
                \\"end\\": {
                  \\"line\\": 16,
                  \\"column\\": 15
                }
              },
              \\"selector\\": \\"\\"
            }
          ],
          \\"selector\\": \\"const\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 14,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 16,
              \\"column\\": 15
            }
          }
        }
      ],
      \\"selector\\": \\"h1\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 16,
          \\"column\\": 15
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 16,
      \\"column\\": 15
    }
  }
}"
`;

exports[`parses basic.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    :\\",
            \\"between\\": \\" \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"font\\",
          \\"value\\": \\"Arial\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    :\\",
            \\"between\\": \\" \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background\\",
          \\"value\\": \\"blue\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 20
            }
          }
        }
      ],
      \\"selector\\": \\"body\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 21
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    :\\",
            \\"between\\": \\" \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"width\\",
          \\"value\\": \\"700px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 8,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 8,
              \\"column\\": 16
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    :\\",
            \\"between\\": \\" \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"height\\",
          \\"value\\": \\"100\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 9,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 9,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        :\\",
                \\"between\\": \\" \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"height\\",
              \\"value\\": \\"300px\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 12,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 12,
                  \\"column\\": 21
                }
              }
            },
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\"\\\\n\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            :\\",
                    \\"between\\": \\" \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"font-size\\",
                  \\"value\\": \\"50px\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 14,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 14,
                      \\"column\\": 27
                    }
                  }
                },
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            :\\",
                    \\"between\\": \\"     \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"color\\",
                  \\"value\\": \\"blue\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 15,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 15,
                      \\"column\\": 27
                    }
                  }
                }
              ],
              \\"selector\\": \\"h1\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 13,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 15,
                  \\"column\\": 28
                }
              }
            }
          ],
          \\"selector\\": \\"#header\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 11,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 16,
              \\"column\\": 1
            }
          }
        }
      ],
      \\"selector\\": \\"#page\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 16,
          \\"column\\": 1
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\"\\\\n\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            :\\",
                    \\"between\\": \\" \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"width\\",
                  \\"value\\": \\"100px\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 20,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 20,
                      \\"column\\": 24
                    }
                  }
                }
              ],
              \\"selector\\": \\"#column.left\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 19,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 20,
                  \\"column\\": 25
                }
              }
            },
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\"\\\\n\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            :\\",
                    \\"between\\": \\" \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"width\\",
                  \\"value\\": \\"600px\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 22,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 22,
                      \\"column\\": 24
                    }
                  }
                }
              ],
              \\"selector\\": \\"#column.right\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 21,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 22,
                  \\"column\\": 25
                }
              }
            }
          ],
          \\"selector\\": \\"#container.top\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 18,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 23,
              \\"column\\": 4
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        :\\",
                \\"between\\": \\" \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"background\\",
              \\"value\\": \\"brown\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 24,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 24,
                  \\"column\\": 25
                }
              }
            }
          ],
          \\"selector\\": \\"#container.bottom\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 23,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 24,
              \\"column\\": 26
            }
          }
        }
      ],
      \\"selector\\": \\"#content.user.show\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 24,
          \\"column\\": 26
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 24,
      \\"column\\": 26
    }
  }
}"
`;

exports[`parses basic2.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background\\",
          \\"value\\": \\"#000\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 20
            }
          }
        }
      ],
      \\"selector\\": \\"body\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 21
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background\\",
          \\"value\\": \\"#000\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 20
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"background\\",
              \\"value\\": \\"#f00\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 8,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 8,
                  \\"column\\": 24
                }
              }
            }
          ],
          \\"selector\\": \\".two\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 7,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 8,
              \\"column\\": 25
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"background\\",
              \\"value\\": \\"#f00\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 11,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 11,
                  \\"column\\": 24
                }
              }
            }
          ],
          \\"selector\\": \\".three\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 10,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 11,
              \\"column\\": 25
            }
          }
        }
      ],
      \\"selector\\": \\".one\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 4,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 25
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 11,
      \\"column\\": 25
    }
  }
}"
`;

exports[`parses comments.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"left\\": \\" \\",
            \\"right\\": \\"\\",
            \\"inline\\": true
          },
          \\"type\\": \\"comment\\",
          \\"text\\": \\"Comment1\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"left\\": \\" \\",
            \\"right\\": \\" \\",
            \\"inline\\": false
          },
          \\"type\\": \\"comment\\",
          \\"text\\": \\"Comment2\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 18
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background-color\\",
          \\"value\\": \\"blue\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 26
            }
          }
        }
      ],
      \\"selector\\": \\".comments\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 27
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"left\\": \\"\\\\n \\",
        \\"right\\": \\"\\\\n \\",
        \\"inline\\": false
      },
      \\"type\\": \\"comment\\",
      \\"text\\": \\"* multi\\\\n * line\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 6,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 9,
          \\"column\\": 3
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 9,
      \\"column\\": 4
    }
  }
}"
`;

exports[`parses custom-property.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"--somecolor\\",
          \\"value\\": \\"#0000ff\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 24
            }
          }
        }
      ],
      \\"selector\\": \\"a\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 25
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 2,
      \\"column\\": 25
    }
  }
}"
`;

exports[`parses custom-property-set.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"color\\",
              \\"value\\": \\"blue\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 3,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 3,
                  \\"column\\": 19
                }
              }
            }
          ],
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 1
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 20
            }
          },
          \\"selector\\": \\"--custom-property-set:\\"
        }
      ],
      \\"selector\\": \\"a\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 20
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 3,
      \\"column\\": 20
    }
  }
}"
`;

exports[`parses empty.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [],
  \\"source\\": {
    \\"start\\": [
      0,
      0
    ],
    \\"end\\": [
      0,
      0
    ]
  }
}"
`;

exports[`parses global.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  :\\",
            \\"between\\": \\"  \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"float\\",
          \\"value\\": \\"left\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  :\\",
            \\"between\\": \\"  \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"width\\",
          \\"value\\": \\"274px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"height\\",
          \\"value\\": \\"75px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"margin\\",
          \\"value\\": \\"0\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 11
            }
          }
        }
      ],
      \\"selector\\": \\"*\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 12
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 5,
      \\"column\\": 12
    }
  }
}"
`;

exports[`parses import.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 1,
      \\"column\\": 27
    }
  }
}"
`;

exports[`parses important.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false,
            \\"important\\": \\" !important\\"
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"important\\": true,
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 25
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false,
                \\"important\\": \\" !important\\"
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"image\\",
              \\"value\\": \\"none\\",
              \\"important\\": true,
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 4,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 4,
                  \\"column\\": 30
                }
              }
            },
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"color\\",
              \\"value\\": \\"red\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 5,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 5,
                  \\"column\\": 18
                }
              }
            }
          ],
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 1
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 19
            }
          },
          \\"selector\\": \\"background:\\"
        }
      ],
      \\"selector\\": \\".important\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 19
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 5,
      \\"column\\": 19
    }
  }
}"
`;

exports[`parses list1.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$empty\\",
      \\"value\\": \\"()\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 10
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 5,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 5,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 21
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $empty\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-space\\",
      \\"value\\": \\"\\\\\\"1\\\\\\" \\\\\\"2\\\\\\" \\\\\\"3\\\\\\"\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 24
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 11,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 11,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 10,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 11,
              \\"column\\": 21
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $list-space\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-comma\\",
      \\"value\\": \\"(\\\\\\"4\\\\\\", \\\\\\"5\\\\\\", \\\\\\"6\\\\\\")\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 13,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 13,
          \\"column\\": 28
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 17,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 17,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 16,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 17,
              \\"column\\": 21
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $list-comma\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-2-dim\\",
      \\"value\\": \\"((7 8) (9 10))\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 19,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 27
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\"\\\\n\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            \\",
                    \\"between\\": \\": \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"content\\",
                  \\"value\\": \\"$el2\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 24,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 24,
                      \\"column\\": 25
                    }
                  }
                }
              ],
              \\"selector\\": \\".el-#{$el2}\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 23,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 24,
                  \\"column\\": 26
                }
              }
            }
          ],
          \\"selector\\": \\"@each $el2 in $el\\"
        }
      ],
      \\"selector\\": \\"@each $el in $list-2-dim\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 24,
      \\"column\\": 26
    }
  }
}"
`;

exports[`parses list1comment.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$empty\\",
      \\"value\\": \\"()\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 10
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 5,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 5,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 21
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $empty\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-space\\",
      \\"value\\": \\"\\\\\\"1\\\\\\" \\\\\\"2\\\\\\" \\\\\\"3\\\\\\"\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 24
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 11,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 11,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 10,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 11,
              \\"column\\": 21
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $list-space\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-comma\\",
      \\"value\\": \\"(\\\\\\"4\\\\\\", \\\\\\"5\\\\\\", \\\\\\"6\\\\\\")\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 13,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 13,
          \\"column\\": 28
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 17,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 17,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 16,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 17,
              \\"column\\": 21
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n\\",
            \\"left\\": \\" \\",
            \\"right\\": \\"\\",
            \\"inline\\": true
          },
          \\"type\\": \\"comment\\",
          \\"text\\": \\"Comment\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 19,
              \\"column\\": 1
            },
            \\"end\\": {
              \\"line\\": 19,
              \\"column\\": 10
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $list-comma\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-2-dim\\",
      \\"value\\": \\"((7 8) (9 10))\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 21,
          \\"column\\": 27
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\"\\\\n\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            \\",
                    \\"between\\": \\": \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"content\\",
                  \\"value\\": \\"$el2\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 26,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 26,
                      \\"column\\": 25
                    }
                  }
                }
              ],
              \\"selector\\": \\".el-#{$el2}\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 25,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 26,
                  \\"column\\": 26
                }
              }
            }
          ],
          \\"selector\\": \\"@each $el2 in $el\\"
        }
      ],
      \\"selector\\": \\"@each $el in $list-2-dim\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 26,
      \\"column\\": 26
    }
  }
}"
`;

exports[`parses list2comment.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-comma\\",
      \\"value\\": \\"(\\\\\\"4\\\\\\", \\\\\\"5\\\\\\", \\\\\\"6\\\\\\")\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 28
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"content\\",
              \\"value\\": \\"$el\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 5,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 5,
                  \\"column\\": 20
                }
              }
            }
          ],
          \\"selector\\": \\".el-#{$el}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 21
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n\\",
            \\"left\\": \\" \\",
            \\"right\\": \\"\\",
            \\"inline\\": true
          },
          \\"type\\": \\"comment\\",
          \\"text\\": \\"Comment22\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 7,
              \\"column\\": 1
            },
            \\"end\\": {
              \\"line\\": 7,
              \\"column\\": 12
            }
          }
        }
      ],
      \\"selector\\": \\"@each $el in $list-comma\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$list-2-dim\\",
      \\"value\\": \\"((7 8) (9 10))\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 27
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\"\\\\n\\"
              },
              \\"type\\": \\"rule\\",
              \\"nodes\\": [
                {
                  \\"raws\\": {
                    \\"before\\": \\"\\\\n            \\",
                    \\"between\\": \\": \\",
                    \\"semicolon\\": false
                  },
                  \\"type\\": \\"decl\\",
                  \\"prop\\": \\"content\\",
                  \\"value\\": \\"$el2\\",
                  \\"source\\": {
                    \\"start\\": {
                      \\"line\\": 13,
                      \\"column\\": 13
                    },
                    \\"end\\": {
                      \\"line\\": 13,
                      \\"column\\": 25
                    }
                  }
                }
              ],
              \\"selector\\": \\".el-#{$el2}\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 12,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 13,
                  \\"column\\": 26
                }
              }
            }
          ],
          \\"selector\\": \\"@each $el2 in $el\\"
        }
      ],
      \\"selector\\": \\"@each $el in $list-2-dim\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 13,
      \\"column\\": 26
    }
  }
}"
`;

exports[`parses little.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background-color\\",
          \\"value\\": \\"green\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 27
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        :\\",
                \\"between\\": \\" \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"font\\",
              \\"value\\": \\"Arial\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 5,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 5,
                  \\"column\\": 19
                }
              }
            },
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        :\\",
                \\"between\\": \\" \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"background\\",
              \\"value\\": \\"blue\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 6,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 6,
                  \\"column\\": 24
                }
              }
            }
          ],
          \\"selector\\": \\".class\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 6,
              \\"column\\": 25
            }
          }
        }
      ],
      \\"selector\\": \\".little\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 6,
          \\"column\\": 25
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 6,
      \\"column\\": 25
    }
  }
}"
`;

exports[`parses map1.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$array\\",
      \\"value\\": \\"(1: '1', 2: '2', 3: '3')\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 32
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$second_array\\",
      \\"value\\": \\"(4: '4', 5: '5')\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 31
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$merged\\",
      \\"value\\": \\"map-merge($array, $second_array)\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 41
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"z-index\\",
              \\"value\\": \\"$num\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 7,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 7,
                  \\"column\\": 21
                }
              }
            }
          ],
          \\"selector\\": \\".link-#{$str}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 6,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 7,
              \\"column\\": 22
            }
          }
        }
      ],
      \\"selector\\": \\"@each $num, $str in $merged\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 7,
      \\"column\\": 22
    }
  }
}"
`;

exports[`parses map2.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"red\\",
          \\"value\\": \\"#e74c3c,\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"blue\\",
          \\"value\\": \\"#3498db,\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 16
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"green\\",
          \\"value\\": \\"#2ecc71,\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 17
            }
          }
        }
      ],
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 18
        }
      },
      \\"selector\\": \\"$button-colors:\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"background-color\\",
              \\"value\\": \\"$color\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 8,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 8,
                  \\"column\\": 28
                }
              }
            }
          ],
          \\"selector\\": \\".button-#{$name}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 7,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 8,
              \\"column\\": 29
            }
          }
        }
      ],
      \\"selector\\": \\"@each $name, $color in $button-colors\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 8,
      \\"column\\": 29
    }
  }
}"
`;

exports[`parses map2comment.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"left\\": \\" \\",
        \\"right\\": \\" \\",
        \\"inline\\": false
      },
      \\"type\\": \\"comment\\",
      \\"text\\": \\"Comment\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 13
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"red\\",
          \\"value\\": \\"#e74c3c,\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 3,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 3,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"blue\\",
          \\"value\\": \\"#3498db,\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 16
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"green\\",
          \\"value\\": \\"#2ecc71,\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 17
            }
          }
        }
      ],
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 18
        }
      },
      \\"selector\\": \\"$button-colors:\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"left\\": \\" \\",
        \\"right\\": \\"\\",
        \\"inline\\": true
      },
      \\"type\\": \\"comment\\",
      \\"text\\": \\"Comment\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 10
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\\\n\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"background-color\\",
              \\"value\\": \\"$color\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 10,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 10,
                  \\"column\\": 28
                }
              }
            }
          ],
          \\"selector\\": \\".button-#{$name}\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 9,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 10,
              \\"column\\": 29
            }
          }
        }
      ],
      \\"selector\\": \\"@each $name, $color in $button-colors\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 10,
      \\"column\\": 29
    }
  }
}"
`;

exports[`parses media.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"display\\",
          \\"value\\": \\"flex\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 15
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n  \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"border\\",
              \\"value\\": \\"0\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 5,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 5,
                  \\"column\\": 13
                }
              }
            }
          ],
          \\"selector\\": \\"@media (max-width: 800px)\\"
        }
      ],
      \\"selector\\": \\".test\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 13
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 5,
      \\"column\\": 13
    }
  }
}"
`;

exports[`parses media2.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\t\\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"content\\",
          \\"value\\": \\"\\\\\\"this won't work :(\\\\\\"\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 2
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 30
            }
          }
        }
      ],
      \\"selector\\": \\"@media screen and (min-width: 1024px)\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"float\\",
          \\"value\\": \\"left\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 13
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"width\\",
          \\"value\\": \\"250px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 6,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 6,
              \\"column\\": 14
            }
          }
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"width\\",
              \\"value\\": \\"100px\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 8,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 8,
                  \\"column\\": 16
                }
              }
            }
          ],
          \\"selector\\": \\"@media screen and (max-width: 320px)\\"
        },
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n\\\\n  \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n    \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"float\\",
              \\"value\\": \\"none\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 11,
                  \\"column\\": 5
                },
                \\"end\\": {
                  \\"line\\": 11,
                  \\"column\\": 15
                }
              }
            }
          ],
          \\"selector\\": \\"@media screen and (min-width: 1200px)\\"
        }
      ],
      \\"selector\\": \\".profile-pic\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 4,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 15
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 11,
      \\"column\\": 15
    }
  }
}"
`;

exports[`parses media3.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$information-phone\\",
      \\"value\\": \\"\\\\\\"only screen and (max-width : 320px)\\\\\\"\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 57
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 17
            }
          }
        }
      ],
      \\"selector\\": \\"@media #{$information-phone}\\"
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$width-name\\",
      \\"value\\": \\"max-device-width\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 6,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 6,
          \\"column\\": 29
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$target-width\\",
      \\"value\\": \\"320px\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 20
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"background\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 10,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 10,
              \\"column\\": 17
            }
          }
        }
      ],
      \\"selector\\": \\"@media screen and ($width-name : $target-width)\\"
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 10,
      \\"column\\": 17
    }
  }
}"
`;

exports[`parses nested.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\"\\"
          },
          \\"type\\": \\"rule\\",
          \\"nodes\\": [
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"color\\",
              \\"value\\": \\"red\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 3,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 3,
                  \\"column\\": 18
                }
              }
            },
            {
              \\"raws\\": {
                \\"before\\": \\"\\\\n        \\",
                \\"between\\": \\": \\",
                \\"semicolon\\": false
              },
              \\"type\\": \\"decl\\",
              \\"prop\\": \\"repeat\\",
              \\"value\\": \\"no-repeat\\",
              \\"source\\": {
                \\"start\\": {
                  \\"line\\": 4,
                  \\"column\\": 9
                },
                \\"end\\": {
                  \\"line\\": 4,
                  \\"column\\": 25
                }
              }
            }
          ],
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 1
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 26
            }
          },
          \\"selector\\": \\"background:\\"
        }
      ],
      \\"selector\\": \\".nested\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 26
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 4,
      \\"column\\": 26
    }
  }
}"
`;

exports[`parses percentage.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"width\\",
          \\"value\\": \\"100%\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 15
            }
          }
        }
      ],
      \\"selector\\": \\"body\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 16
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 2,
      \\"column\\": 16
    }
  }
}"
`;

exports[`parses selectors.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 14
            }
          }
        }
      ],
      \\"selector\\": \\".a, .b\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 15
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 5,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 5,
              \\"column\\": 14
            }
          }
        }
      ],
      \\"selector\\": \\".a,.b\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 4,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 15
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 8,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 8,
              \\"column\\": 14
            }
          }
        }
      ],
      \\"selector\\": \\".a,.b, .c, .b,.e\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 15
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 12,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 12,
              \\"column\\": 12
            }
          }
        }
      ],
      \\"selector\\": \\".a,\\\\n.b\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 12,
          \\"column\\": 13
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 12,
      \\"column\\": 13
    }
  }
}"
`;

exports[`parses variable-interpolation.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n  \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"#{$var}\\",
          \\"value\\": \\"10px\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 2,
              \\"column\\": 3
            },
            \\"end\\": {
              \\"line\\": 2,
              \\"column\\": 15
            }
          }
        }
      ],
      \\"selector\\": \\"a\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 16
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 2,
      \\"column\\": 16
    }
  }
}"
`;

exports[`parses variables.sass 1`] = `
"{
  \\"raws\\": {
    \\"before\\": \\"\\"
  },
  \\"type\\": \\"root\\",
  \\"nodes\\": [
    {
      \\"raws\\": {
        \\"before\\": \\"\\",
        \\"between\\": \\": \\",
        \\"semicolon\\": false
      },
      \\"type\\": \\"decl\\",
      \\"prop\\": \\"$red\\",
      \\"value\\": \\"red\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 1,
          \\"column\\": 9
        }
      }
    },
    {
      \\"raws\\": {
        \\"before\\": \\"\\\\n\\\\n\\",
        \\"between\\": \\"\\\\n\\"
      },
      \\"type\\": \\"rule\\",
      \\"nodes\\": [
        {
          \\"raws\\": {
            \\"before\\": \\"\\\\n    \\",
            \\"between\\": \\": \\",
            \\"semicolon\\": false
          },
          \\"type\\": \\"decl\\",
          \\"prop\\": \\"color\\",
          \\"value\\": \\"$red\\",
          \\"source\\": {
            \\"start\\": {
              \\"line\\": 4,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"line\\": 4,
              \\"column\\": 15
            }
          }
        }
      ],
      \\"selector\\": \\"a\\",
      \\"source\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 16
        }
      }
    }
  ],
  \\"source\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"line\\": 4,
      \\"column\\": 16
    }
  }
}"
`;
